--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ homepage: https://github.com/RounakTadvi/internet_connection_checker/tree/main
 environment:
   sdk: ">=2.17.0 <3.0.0"
 
+dependencies:
+  universal_io: ^2.0.4
+
 dev_dependencies:
   coverage: ^1.3.2
   test: ^1.21.1
