--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ environment:
   sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
+  flutter:
+    sdk: flutter
+
+  universal_html: ^2.0.8
   universal_io: ^2.0.4
 
 dev_dependencies:
